...
"OnBoarding.Title.Others" = "Others";

"OnBoarding.Title.eXoPlatformDescription" = "Connect, share and work together";

"OnBoarding.Title.SavingServer" = "Saving intranet ...";

"OnBoarding.Message.EnterURL" = "Enter your intranet URL";

"OnBoarding.Error.PlatformNotSupported" = "Platform version not supported";

"OnBoarding.Error.PlatformNotFound" = "Platform version not found";

"OnBoarding.Error.PlatformNotSupportedDetailMessage" = "The application only supports Platform version 4.3 or later";

"Word.OK" = "OK";

"Word.Cancel" = "Cancel";

"Word.Back" = "Back";

"OnBoarding.Error.URL" = "Intranet URL error";
...
