...
        okButton.addCornerRadiusWith(radius: 5.0)
        noButton.addBorderWith(width: 1, color: UIColor(hex: 0x4382BF).withAlphaComponent(0.5), cornerRadius: 5.0)
        discriptionLabel.text = descriptionMessage
        titleLabel.text = titleDescription
        switch actionHandler {
        case .delete:
            let okButtonTitle = "Delete".localized
            let noButtonTitle = "Cancel".localized
            okButton.setTitle(okButtonTitle, for: .normal)
            noButton.setTitle(noButtonTitle, for: .normal)
            noButton.isHidden = false
            noButton.isEnabled = true
        case .store:
...
